--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "devstart": "nodemon server.js"
+    "start": "node index.js",
+    "devstart": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
